--- a/MATH2940/math-2940-study-guide.tex
+++ b/MATH2940/math-2940-study-guide.tex
@@ -60,7 +60,7 @@
 % scaling command
 % first argument is the row to be scaled
 % second argument is the amount to scale it by
-\newcommand{\scalerow}[2]{\text{#2}\circlemath{#1}}
+\newcommand{\scalerow}[2]{\circlemath{#1} \leftarrow \text{#2}\circlemath{#1}}
 
 % scaling command with right arrow below
 % arguments are the same as regular scalerow command
@@ -192,52 +192,99 @@
 			In the below example, pivot positions are circled.
 			
 			\begin{flalign*}
-				\begin{bmatrix}
+				&\begin{bmatrix}
 					0 & -3 & -6 & 4 & 9\\
 					-1 & -2 & -1 & 3 & 1\\
 					-2 & -3 & 0 & 3 & -1\\
 					1 & 4 & 5 & -9 & -7
-				\end{bmatrix}\\
+				\end{bmatrix}
 				\intchngrightarr{1}{4}
 				\begin{bmatrix}
 					\circlemath{1} & 4 & 5 & -9 & -7\\
 					-1 & -2 & -1 & 3 & 1\\
 					-2 & -3 & 0 & 3 & -1\\
 					0 & -3 & -6 & 4 & 9
-				\end{bmatrix}\\
-				\replacerightarr{2}{1}{1}
+				\end{bmatrix}&&\\
+				&\replacerightarr{2}{1}{1}
 				\begin{bmatrix}
 					1 & 4 & 5 & -9 & -7\\
 					0 & 2 & 4 & 6 & -6\\
 					-2 & -3 & 0 & 3 & -1\\
 					0 & -3 & -6 & 4 & 9
-				\end{bmatrix}\\
+				\end{bmatrix}
 				\replacerightarr{3}{1}{2}
 				\begin{bmatrix}
 					1 & 4 & 5 & -9 & -7\\
 					0 & \circlemath{2} & 4 & 6 & -6\\
 					0 & 5 & 10 & -15 & -15\\
 					0 & -3 & -6 & 4 & 9
-				\end{bmatrix}\\
-				\replacerightarr{3}{2}{-(5/2)}
+				\end{bmatrix}&&\\
+				&\replacerightarr{3}{2}{-(5/2)}
 				\begin{bmatrix}
 					1 & 4 & 5 & -9 & -7\\
 					0 & 2 & 4 & 6 & -6\\
 					0 & 0 & 0 & 0 & 0\\
 					0 & -3 & -6 & 4 & 9
-				\end{bmatrix}\\
+				\end{bmatrix}
 				\replacerightarr{4}{2}{-(3/2)}
 				\begin{bmatrix}
 					1 & 4 & 5 & -9 & -7\\
 					0 & 2 & 4 & 6 & -6\\
 					0 & 0 & 0 & 0 & 0\\
 					0 & 0 & 0 & -5 & 0
-				\end{bmatrix}\\
+				\end{bmatrix}&&\\
+				&\intchngrightarr{3}{4}
 				\begin{bmatrix}
 					1 & 4 & 5 & -9 & -7\\
 					0 & 2 & 4 & 6 & -6\\
-					0 & 0 & 0 & 0 & 0\\
-					0 & 0 & 0 & -5 & 0
+					0 & 0 & 0 & \circlemath{-5} & 0\\
+					0 & 0 & 0 & 0 & 0
+				\end{bmatrix}
+			\end{flalign*}
+			
+			The matrix is now in echelon form. To reduce to reduced row echelon form, we need to use row operations to create 0s above the pivots. The following row operations achieve that.
+			
+			\begin{flalign*}
+				&\begin{bmatrix}
+					\circlemath{1} & 4 & 5 & -9 & -7\\
+					0 & \circlemath{2} & 4 & 6 & -6\\
+					0 & 0 & 0 & \circlemath{-5} & 0\\
+					0 & 0 & 0 & 0 & 0
+				\end{bmatrix}
+				\scalerowrightarr{3}{(-1/5)}
+				\begin{bmatrix}
+					1 & 4 & 5 & -9 & -7\\
+					0 & 2 & 4 & -6 & -6\\
+					0 & 0 & 0 & 1 & 0\\
+					0 & 0 & 0 & 0 & 0
+				\end{bmatrix}&&\\
+				&\replacerightarr{2}{3}{6}
+				\begin{bmatrix}
+					1 & 4 & 5 & -9 & -7\\
+					0 & 2 & 4 & 0 & -6\\
+					0 & 0 & 0 & 1 & 0\\
+					0 & 0 & 0 & 0 & 0
+				\end{bmatrix}
+				\replacerightarr{1}{3}{9}
+				\begin{bmatrix}
+					1 & 4 & 5 & 0 & -7\\
+					0 & 2 & 4 & 0 & -6\\
+					0 & 0 & 0 & 1 & 0\\
+					0 & 0 & 0 & 0 & 0
+				\end{bmatrix}&&\\
+				&\scalerowrightarr{2}{(1/2)}
+				\begin{bmatrix}
+					1 & 4 & 5 & 0 & -7\\
+					0 & 1 & 2 & 0 & -3\\
+					0 & 0 & 0 & 1 & 0\\
+					0 & 0 & 0 & 0 & 0
+				\end{bmatrix}
+				\replacerightarr{1}{2}{-4}
+				\begin{bmatrix}
+					1 & 0 & -3 & 0 & 5\\
+					0 & 1 & 2 & 0 & -3\\
+					0 & 0 & 0 & 1 & 0\\
+					0 & 0 & 0 & 0 & 0
 				\end{bmatrix}
 			\end{flalign*}
 		\end{example}
